@startuml

title __ADAPTERS's Class Diagram__\n

  package com.utilisateur.orthomem {
    package com.utilisateur.orthomem.adapters {
      class ExerciceListRecyclerViewAdapter {
          - mExercicesList : ArrayList<Exercice>
          + onCreateViewHolder()
          + getItemCount()
          + getExerciceFromPosition()
          + ExerciceListRecyclerViewAdapter()
          + onBindViewHolder()
      }
    }
  }
  

  package com.utilisateur.orthomem {
    package com.utilisateur.orthomem.adapters {
      interface FavoriteIconListener {
          {abstract} + onClickFavoriteIcon()
      }
    }
  }
  

  package com.utilisateur.orthomem {
    package com.utilisateur.orthomem.adapters {
      class WordListRecyclerViewAdapter {
          - mWordsList : List<Word>
          + onCreateViewHolder()
          + onBindViewHolder()
          + getItemCount()
          + getWordFromPosition()
          + WordListRecyclerViewAdapter()
      }
    }
  }
  

  package com.utilisateur.orthomem {
    package com.utilisateur.orthomem.adapters {
      interface CheckBoxListener {
          {abstract} + onClickCheckBox()
      }
    }
  }
  

  ExerciceListRecyclerViewAdapter -up-|> Adapter
  ExerciceListRecyclerViewAdapter o-- FavoriteIconListener : mCallback
  ExerciceListRecyclerViewAdapter +-down- FavoriteIconListener
  WordListRecyclerViewAdapter -up-|> Adapter
  WordListRecyclerViewAdapter o-- CheckBoxListener : mCallback
  WordListRecyclerViewAdapter +-down- CheckBoxListener


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
